--- a/task03_0606/Views/Member/StoreTable.cshtml
+++ b/task03_0606/Views/Member/StoreTable.cshtml
@@ -120,8 +120,9 @@
                     '<label>商店電話：@ViewBag.storePhone</label></br>' +
                     '<label>負責人：@ViewBag.lastName@ViewBag.firstName</label></br>' +
                     '<label>負責人電話：@ViewBag.ownerPhoneNum</label></br>' +
+                    '<a href="/Member/DeleteStore?storeId=@ViewBag.storeId">移除商店' +
 
-
+                    '</a>' +
                     '</div>' +
                     '</div>' +
                     '</div>',
